# coursework5

./: README.md  pyproject.toml
api/: hh_api.py
src/: employer.py  main.py  user_interaction.py  vacancy.py
src/configurations/: config.py  database.ini
src/data/: db_create.py  db_manager.py  db_query.py
src/storage/: json_saver.py
