[tool.poetry]
name = "coursework5"
version = "0.1.0"
description = ""
authors = ["Sprite_Spirit <74331153+SpriteSpirit@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
